fixes chat overflow

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -301,7 +301,11 @@ list-style-type: none;
   float:right;
 }
 
-
+#chat {
+  margin-top:20px;
+  height: 550px;
+  overflow: auto;
+}
 
 
 
